Orientações sobre a chave da API do google maps
Orientação sobre a chave da API do google maps. Para obter a sua acesse: https://console.developers.google.com/ e solicite.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBqCJtQWmWxgUqM_zt8qLZYgmmbsKDRH5E" />
+            android:value="suaChaveAqui" />
     </application>
 
 </manifest>
